--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,12 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/KentoDragon.jpeg" />
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
   <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500;600;700&family=Montserrat:wght@500;700;900&family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500;600;700&family=Montserrat:wght@500;700;900&family=Roboto:wght@100;300;400&display=swap"
+    rel="stylesheet">
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using React" />
   <!--
