--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,14 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500;600;700&family=Montserrat:wght@500;700;900&family=Roboto:wght@100;300;400&display=swap"
     rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100;200;300;400;500;600;700&display=swap"
+    rel="stylesheet">
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using React" />
   <!--
