--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/KentoDragon.jpeg" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <script
     src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
   <link rel="preconnect" href="https://fonts.gstatic.com">
